--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ ul li.checked {
   text-decoration: line-through;
 }
 
-/* Add a "checked" mark when clicked on
+/* Add a "checked" mark when clicked on */
 ul li.checked::before {
   content: '';
   position: absolute;
@@ -65,46 +65,7 @@ ul li.checked::before {
   transform: rotate(45deg);
   height: 15px;
   width: 7px;
-} */
-
-
-
-/* Create a custom checkbox */
-.ul li.checked: :before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 25px;
-  width: 25px;
-  background-color: #eee;
 }
-
-/* Create the checkmark/indicator (hidden when not checked) */
-ul li.checked: :before:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-
-/* Show the checkmark when checked */
-ul li.checked: :before input:checked ~ .checkmark:after {
-  display: block;
-}
-
-/* Style the checkmark/indicator */
-ul li.checked: :before .checkmark:after {
-  left: 9px;
-  top: 5px;
-  width: 5px;
-  height: 10px;
-  border: solid rgb(0, 4, 255);
-  border-width: 0 3px 3px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-
 
 /* Style the close button */
 .close {
@@ -121,14 +82,14 @@ ul li.checked: :before .checkmark:after {
 
 /* Style the header */
 .listAdd {
-  background-color: #000080;
-  padding: 20px 400px;
+  background-color: #f44336;
+  padding: 30px 400px;
   color: white;
   text-align: center;
 }
 
 /* Clear floats after the header */
-.listAdd:after {
+.:after {
   content: "";
   display: table;
   clear: both;
@@ -148,15 +109,12 @@ input {
 /* Style the "Add" button */
 .addTitleAdd {
   padding: 10px;
-  position: relative;
-
-  border-color: #000080;
-  width: 8%;
-  background: #000000;
-  color: #ffffff;
+  width: 25%;
+  background: #d9d9d9;
+  color: #555;
   float: left;
   text-align: center;
-  font-size: 20px;
+  font-size: 16px;
   cursor: pointer;
   transition: 0.3s;
   border-radius: 0;
