--- a/style.css
+++ b/style.css
@@ -3,125 +3,105 @@ body {
     background-color:brown;
    }    
 
-#titleStyle {
-    font-family: Broadway;
-    font-size: 50px;
-    text-align: center;
-}
-
-/* Include the padding and border in an element's total width and height */
-* {
-  box-sizing: border-box;
-}
-
-/* Remove margins and padding from the list */
-ul {
+*{
   margin: 0;
   padding: 0;
+  font-family: 'Poppins', sans-serif;
 }
 
-/* Style the list items */
-ul li {
-  cursor: pointer;
-  position: relative;
-  padding: 12px 8px 12px 40px;
-  background: #eee;
-  font-size: 18px;
-  transition: 0.2s;
-
-  /* make the list items unselectable */
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+body{
+  background: #f5f5f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
 }
 
-/* Set all odd list items to a different color (zebra-stripes) */
-ul li:nth-child(odd) {
-  background: #f9f9f9;
+.title{
+  font-size: 30px;
+  font-weight: 600;
+  color: #000080;
+  letter-spacing: 1px;
+  margin: 30px 0;
 }
 
-/* Darker background-color on hover */
-ul li:hover {
-  background: #ddd;
+.todoList{
+  width: 450px;
+  padding: 20px;
+  box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  background-color: fff;
 }
 
-/* When clicked on, add a background color and strike out text */
-ul li.checked {
-  background: #888;
-  color: #fff;
-  text-decoration: line-through;
+.listHeader{
+  display: grid;
+  grid-template-columns: 4fr 1fr;
+  gap: 20px
 }
 
-/* Add a "checked" mark when clicked on */
-ul li.checked::before {
-  content: '';
-  position: absolute;
-  border-color: #fff;
-  border-style: solid;
-  border-width: 0 2px 2px 0;
-  top: 10px;
-  left: 16px;
-  transform: rotate(45deg);
-  height: 15px;
-  width: 7px;
+.enterList{
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  outline: none;
 }
 
-/* Style the close button */
-.close {
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 12px 16px 12px 16px;
-}
-
-.close:hover {
-  background-color: #f44336;
-  color: white;
-}
-
-/* Style the header */
-.listAdd {
-  background-color: #f44336;
-  padding: 30px 400px;
-  color: white;
-  text-align: center;
-}
-
-/* Clear floats after the header */
-.:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Style the input */
-input {
-  margin: 0;
+.addList{
   border: none;
-  border-radius: 0;
-  width: 75%;
-  padding: 10px;
-  float: left;
+  border-radius: 5px;
+  background-color: #000080;
+  outline: none;
   font-size: 16px;
-}
-
-/* Style the "Add" button */
-.addTitleAdd {
-  padding: 10px;
-  width: 25%;
-  background: #d9d9d9;
-  color: #555;
-  float: left;
-  text-align: center;
-  font-size: 16px;
+  color: #fff;
   cursor: pointer;
-  transition: 0.3s;
-  border-radius: 0;
+  opacity: .6;
+  pointer-events: none;
 }
 
-.addTitleAdd:hover {
-  background-color: #bbb;
+.add-list.active{
+  opacity: 1;
+  pointer-events: all;
 }
 
+.task{
+  width: 100%;
+  margin-top: 30px;
+}
+
+.item-completed{
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.item p{
+  font-size: 16px;
+  font-weight: 400;
+  color: #111;
+  letter-spacing: 1px;
+}
+
+.item.completed p{
+  text-decoration: line-through;
+  color: #11111180;
+}
+
+.item-btn{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.item-btn i {
+  color: #000080;
+  font-size: 10px;
+  cursor: pointer;
+}
    
