--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-body {
-    background-image: url("Nature-original.jpg");
-    background-color:brown;
-   }    
-
 *{
   margin: 0;
   padding: 0;
@@ -17,6 +12,48 @@ body{
   flex-direction: column;
   height: 100vh;
   width: 100vw;
+}
+
+ul li {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  cursor: pointer;
+  position: relative;
+  padding: 12px 8px 12px 40px;
+  font-size: 18px;
+  transition: 0.2s;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+ul li:hover {
+  background: #ddd;
+}
+
+ul li.checked::before {
+  content: '';
+  position: absolute;
+  border-color: #000080;
+  border-style: solid;
+  border-width: 0 2px 2px 0;
+  top: 10px;
+  left: 16px;
+  transform: rotate(45deg);
+  height: 15px;
+  width: 7px;
+}
+
+
+.addBtn:hover {
+  background-color: #bbb;
+}
+
+.close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 12px 16px 12px 16px;
 }
 
 .title{
@@ -49,21 +86,18 @@ body{
   outline: none;
 }
 
-.addList{
+.addBtn{
   border: none;
   border-radius: 5px;
   background-color: #000080;
   outline: none;
   font-size: 16px;
   color: #fff;
-  cursor: pointer;
   opacity: .6;
-  pointer-events: none;
 }
 
 .add-list.active{
   opacity: 1;
-  pointer-events: all;
 }
 
 .task{
@@ -71,37 +105,3 @@ body{
   margin-top: 30px;
 }
 
-.item-completed{
-  padding: 10px;
-  border-radius: 5px;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.item p{
-  font-size: 16px;
-  font-weight: 400;
-  color: #111;
-  letter-spacing: 1px;
-}
-
-.item.completed p{
-  text-decoration: line-through;
-  color: #11111180;
-}
-
-.item-btn{
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.item-btn i {
-  color: #000080;
-  font-size: 10px;
-  cursor: pointer;
-}
-   
