--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-  background: #f5f5f5;
+  background: #721515;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,6 +17,8 @@ body{
 ul li {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   cursor: pointer;
+  background-color: #ffffff;
+  color:rgb(0, 0, 0);
   position: relative;
   padding: 12px 8px 12px 40px;
   font-size: 18px;
@@ -27,6 +29,12 @@ ul li {
   user-select: none;
 }
 
+ul li.checked {
+  background: #266021;
+  color: #fff;
+  text-decoration: line-through;
+}
+
 ul li:hover {
   background: #ddd;
 }
@@ -34,7 +42,7 @@ ul li:hover {
 ul li.checked::before {
   content: '';
   position: absolute;
-  border-color: #000080;
+  border-color: #ffffff;
   border-style: solid;
   border-width: 0 2px 2px 0;
   top: 10px;
@@ -43,7 +51,6 @@ ul li.checked::before {
   height: 15px;
   width: 7px;
 }
-
 
 .addBtn:hover {
   background-color: #bbb;
@@ -58,8 +65,8 @@ ul li.checked::before {
 
 .title{
   font-size: 30px;
-  font-weight: 600;
-  color: #000080;
+  font-weight: 800;
+  color: #ffffff;
   letter-spacing: 1px;
   margin: 30px 0;
 }
@@ -69,7 +76,7 @@ ul li.checked::before {
   padding: 20px;
   box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  background-color: fff;
+  background-color: #fff;
 }
 
 .listHeader{
@@ -83,17 +90,16 @@ ul li.checked::before {
   border-radius: 5px;
   border: 1px solid #ccc;
   font-size: 16px;
-  outline: none;
+  outline: none; 
 }
 
 .addBtn{
   border: none;
   border-radius: 5px;
-  background-color: #000080;
+  background-color: #19600f;
   outline: none;
   font-size: 16px;
-  color: #fff;
-  opacity: .6;
+  color: rgb(255, 255, 255);
 }
 
 .add-list.active{
